菜单更新前上传
